<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Code of Knighthood</string>
    <string name="CDknight">Knight</string>
    <string name="CDshield">Shield</string>
    <string name="CDstarBorder"></string>
    <string name="CDblank"></string>
    <string name="startButton">Begin the Quest!</string>
    <string name="text1">Text 1</string>
    <string name="text2">Text 2</string>
    <string name="text3">Text 3</string>
    <string name="referencesHeader">References</string>
    <string name="similarities">Similarities</string>
    <string name="differences">Differences</string>

</resources>
